--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="A Pokedex implementing Algolia's search API, built as part of Mintbean's 4h hackathon"
+    />    
+    <meta property="og:image" content="https://jpqy.github.io/mintbean-careerhack-algolia/img/og.png" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="800" />
+    <meta property="og:url" content="https://jpqy.github.io/mintbean-careerhack-algolia" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Mintbean CareerHack Hackathon - Algolia Pokedex" />
+    <meta property="og:description" content="A Pokedex implementing Algolia's search API, built as part of Mintbean's 4h hackathon" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Mintbean CareerHack Hackathon - Algolia Pokedex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
